--- a/.gitignore
+++ b/.gitignore
@@ -123,7 +123,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-artifacts
+.artifacts
 .env
 .venv
 env/
@@ -131,7 +131,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
-
+artifacts/
 # Spyder project settings
 .spyderproject
 .spyproject
